<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="aipay_logining">登录中</string>
	<string name="aipay_switch_account">切换帐号</string>
	<string name="aipay_login_lable">用户%1$s</string>
    <string name="aipay_get_sms_code">获取短信验证码</string>
    <string name="aipay_input_sms_code">验证码</string>
    <string name="aipay_resend">%1$d秒后重新发送</string>
    <string name="aipay_send_fail">验证码发送失败</string>
    <string name="aipay_sms_code_null">请填写短信验证码</string>
    <string name="aipay_phone_number">手机号:</string>
    <string name="sapi_Fastreg_SIM_absent">无SIM卡,无法使用此功能</string>
    <string name="sapi_Fastreg_SIM_unknown">未知状态,请检查SIM卡</string>
    <string name="sapi_Fastreg_SIM_locked">SIM卡已锁,请先解锁</string>
    <string name="sapi_Fastreg_permission_deny">应用无权限访问此功能</string>
    <string name="sapi_FastReg_sms_reg_error">注册失败</string>
    <string name="sapi_FastLogin_sms_reg_error">登录失败</string>
    <string name="sapi_FastReg_sms_format_error">短信格式错误，请重新发送</string>
    <string name="sapi_FastReg_sms_not_exist_error">短信不存在，请重新发送</string>
    <string name="sapi_FastReg_sms_mobile_exist_error">手机号已存在，请直接登录</string>
    <string name="sapi_FastReg_sms_frequently">短信请求频繁</string>
    <string name="sapi_FastReg_sms_ask_frequently">登录次数超限，请24小时后再试</string>
    <string name="sapi_unknown_error">未知错误</string>
    <string name="sapi_login_account_hint">手机号/邮箱/用户名</string>
    <string name="sapi_login_password_hint">密码</string>
    <string name="sapi_register_title">注册百度帐号</string>
    <string name="sapi_login_title">百度帐号登录</string>
    <string name="sapi_login_title1">帐号登录</string>
    <string name="sapi_duoku_title">多酷登录</string>
    <string name="sapi_loging_account">帐号:</string>
    <string name="sapi_pw">密码:</string>
    <string name="sapi_verify">验证码:</string>
    <string name="sapi_change_verify_code">换一换</string>
    <string name="sapi_phone_re">手机号一键登录</string>
    <string name="sapi_phone_re1">手机号注册</string>
    <string name="sapi_login">登录</string>
    <string name="sapi_re_tip">将用您的手机发送验证短信</string>
    <string name="sapi_re_tip_land">将用手机发送短信</string>
    <string name="sapi_get_passwd">找回密码</string>
    <string name="sapi_password_wrong">密码错误，请重新输入</string>
    <string name="sapi_password_format_error">密码格式错误，请重新输入</string>
    <string name="sapi_username_not_exists">帐号不存在</string>
    <string name="sapi_username_format_error">用户名格式错误，请重新输入</string>
    <string name="sapi_username_not_use">用户名不可用</string>
    <string name="sapi_password_weak">密码过于简单，请重新设置</string>
    <string name="sapi_account_not_activate">帐号未激活，请查收验证邮件</string>
    <string name="sapi_verifycode_input_error">验证码输入错误</string>
    <string name="sapi_verifycode_input_error2">验证码输入错误，请重新输入</string>
    <string name="sapi_cannot_login">对不起，您现在无法登录</string>
    <string name="sapi_phone_format_error">手机号格式错误</string>
    <string name="sapi_phone_not_exists">手机号未注册</string>
    <string name="sapi_network_fail">网络不通，请稍候再试</string>
    <string name="sapi_verifycode_hint">请输入验证码</string>
    <string name="sapi_get_pw">找回密码</string>
    <string name="sapi_logining">登录中</string>
    <string name="sapi_reing">注册中</string>
    <string name="sapi_phone_null">登录帐号不能为空</string>
    <string name="sapi_user_null">用户名不能为空</string>
    <string name="sapi_pass_null">密码不能为空</string>
    <string name="sapi_verify_null">验证码不能为空</string>
    <string name="sapi_phone_re_fast">注册</string>
    <string name="sapi_weak_password">密码过于简单，请更换复杂密码</string>
    <string name="sapi_cheat">请求频度过快</string>
    <string name="sapi_username_exist">用户名已存在</string>
    <string name="sapi_regist_success">注册成功</string>
    <string name="sapi_phone_reg_tips">↑将用您的手机发送验证信息</string>
    <string name="sapi_dynamic_pwd_sms_ask_frequently">验证码请求频繁</string>
    <string name="sapi_dynamic_pwd_expired_error">动态密码不存在或已过期</string>
    <string name="sapi_dynamic_pwd_phone_empty_error">手机号不能为空</string>
    <string name="sapi_dynamic_pwd_sms_send_success">验证码已发送</string>
    <string name="sapi_dynamic_phone_empty_error">手机号不能为空</string>
    <string name="sapi_username_or_phone">为了确保您的帐号安全，请确认您输入的帐号是手机号后即可登录</string>
    <string name="aipay_no_network">网络错误，请检查网络并重试。</string>
</resources>