<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#F2F2F2"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="20dp" >

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="15dp"
        android:text="@string/aipay_login_lable"
        android:textColor="#ff000000" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:indeterminateDrawable="@drawable/aipay_loading"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/loading_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="15dp"
            android:gravity="bottom"
            android:text="@string/aipay_logining"
            android:textColor="#ff000000" />
    </LinearLayout>

    <View
        android:id="@+id/account_line"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/aipay_broken_line" />

    <TextView
        android:id="@+id/dialog_msg"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="bottom"
        android:text="@string/aipay_switch_account"
        android:textColor="#5f88d4"
        android:textSize="15dp" />
</LinearLayout>