<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

    <RelativeLayout
        android:id="@+id/login_area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <RelativeLayout
            android:id="@+id/title_area"
            android:layout_width="match_parent"
            android:layout_height="@dimen/aipay_title_heigth"
            android:background="@drawable/aipay_bg_title_login"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <LinearLayout
                android:id="@+id/title_back"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:background="@drawable/aipay_title_v_line"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sapi_login_title"
                android:textColor="@color/aipay_white"
                android:textSize="20sp"
                android:typeface="sans" />

            <ImageView
                android:id="@+id/cancel"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@drawable/aipay_bt_close_selector"
                android:visibility="gone" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_area"
            android:background="@drawable/aipay_bg_login" >

            <RelativeLayout
                android:id="@+id/inner_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <RelativeLayout
                    android:id="@+id/pay_card_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/aipay_edit_text_view_bg"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/account_area"
                        android:layout_width="fill_parent"
                        android:layout_height="42dp"
                        android:background="@color/aipay_white" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip"
                            android:gravity="center_vertical"
                            android:text="@string/sapi_loging_account"
                            android:textColor="@color/aipay_black"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/account"
                            android:layout_width="0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/sapi_login_account_hint"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            android:textSize="15sp" />

                        <ImageView
                            android:id="@+id/accout_del"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="15dp"
                            android:src="@drawable/aipay_bg_del_selector" />

                        <ImageView
                            android:id="@+id/arrow"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="15dp"
                            android:src="@drawable/aipay_user_arror_down" />
                    </LinearLayout>

                    <View
                        android:id="@+id/account_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_below="@+id/account_area"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/aipay_broken_line" />

                    <LinearLayout
                        android:id="@+id/pass_area"
                        android:layout_width="fill_parent"
                        android:layout_height="42dp"
                        android:layout_below="@+id/account_line"
                        android:background="@color/aipay_white" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip"
                            android:gravity="center_vertical"
                            android:text="@string/sapi_pw"
                            android:textColor="@color/aipay_black"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/pass"
                            android:layout_width="0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/sapi_login_password_hint"
                            android:inputType="textPassword"
                            android:maxLength="14"
                            android:singleLine="true"
                            android:textSize="15sp" />

                        <ImageView
                            android:id="@+id/pass_del"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/aipay_bg_del_selector" />

                        <TextView
                            android:id="@+id/getPW"
                            android:layout_width="80dp"
                            android:layout_height="fill_parent"
                            android:layout_gravity="center_vertical"
                            android:clickable="true"
                            android:gravity="center"
                            android:text="@string/sapi_get_pw"
                            android:textColor="@color/aipay_select_login"
                            android:textSize="15sp" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/phone_verifycode_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/pay_card_area"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/aipay_circular_bg1"
                    android:gravity="left|center_vertical"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/warp_code"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip"
                            android:gravity="center_vertical"
                            android:text="@string/sapi_verify"
                            android:textColor="@color/aipay_black"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/ph_verifycode"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dip"
                            android:layout_weight="1"
                            android:background="@null"
                            android:lines="1"
                            android:maxLength="10"
                            android:minWidth="70dp"
                            android:maxWidth="80dp"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/get_verify_code"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dip"
                        android:clickable="true"
                        android:orientation="horizontal" >
                        <ImageView
                            android:id="@+id/phone_verifycodeImg"
                            android:layout_width="70dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:scaleType="fitCenter" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:lines="1"
                            android:maxLines="1"
                            android:text="@string/sapi_change_verify_code"
                            android:textColor="@color/aipay_select_login"
                            android:textSize="15sp" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/login_bt_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone_verifycode_layout"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dip" >

                    <LinearLayout
                        android:id="@+id/reg_area"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal" >
                        <Button
                            android:id="@+id/phoneRegister"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="42dp"
                            android:background="@drawable/aipay_reg_selector"
                            android:text="@string/sapi_phone_re"
                            android:layout_marginRight="10dp"
                            android:textColor="@color/aipay_white"
                            android:textSize="15sp" />

                        <Button
                            android:id="@+id/login"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="42dp"
                            android:background="@drawable/aipay_login_selector"
                            android:text="@string/sapi_login"
                            android:textColor="@color/aipay_white"
                            android:textSize="15sp" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/phoneRegister_tips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/reg_area"
                        android:layout_below="@+id/reg_area"
                        android:layout_marginTop="7dp"
                        android:text="@string/sapi_phone_reg_tips"
                        android:textColor="#999999"
                        android:textSize="13sp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/histroy_user"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/pay_card_area"
                    android:layout_alignRight="@+id/pay_card_area"
                    android:layout_alignTop="@+id/pay_card_area"
                    android:layout_marginTop="39dp"
                    android:background="@drawable/aipay_bg_histroy"
                    android:orientation="vertical"
                    android:visibility="gone" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/v_forgetpwd_area"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/aipay_white"
        android:orientation="vertical"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/aipay_title_bar_bg" >

            <ImageView
                android:id="@+id/img_forgetpwd_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:src="@drawable/aipay_title_back_selector" />

            <View
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/img_forgetpwd_back"
                android:background="@drawable/aipay_title_v_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:text="@string/sapi_get_passwd"
                android:textColor="@color/aipay_white"
                android:textSize="20sp"
                android:typeface="sans" />
        </RelativeLayout>

        <WebView
            android:id="@+id/sapi_forgetpwd_wv_page"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>