<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

    <RelativeLayout
        android:id="@+id/login_area"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="15dp" >

        <RelativeLayout
            android:id="@+id/title_area"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/aipay_title_heigth"
            android:layout_alignParentTop="true"
            android:background="@drawable/aipay_bg_title_login" >

            <LinearLayout
                android:id="@+id/title_back"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="17dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="17dip"
                    android:layout_marginRight="17dip"
                    android:background="@drawable/aipay_title_back_selector" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:background="@drawable/aipay_title_v_line" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/sapi_register_title"
                android:textColor="@color/aipay_white"
                android:textSize="20sp"
                android:typeface="sans" />

            <ImageView
                android:id="@+id/cancel"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/aipay_bt_close_selector" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_area" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/aipay_bg_login"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/pay_card_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/aipay_edit_text_view_bg"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/account_area"
                        android:layout_width="fill_parent"
                        android:layout_height="42dp"
                        android:background="@color/aipay_white" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip"
                            android:gravity="center_vertical"
                            android:text="@string/aipay_phone_number"
                            android:textColor="@color/aipay_black"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/sapi_dynamic_login_et_phone"
                            android:layout_width="0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:background="@null"
                            android:inputType="number"
                            android:maxLength="11"
                            android:singleLine="true"
                            android:textSize="15sp" />

                        <ImageView
                            android:id="@+id/phone_del"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="15dp"
                            android:src="@drawable/aipay_bg_del_selector" />
                    </LinearLayout>

                    <View
                        android:id="@+id/account_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_below="@+id/account_area"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/aipay_broken_line" />

                    <LinearLayout
                        android:id="@+id/pass_area"
                        android:layout_width="fill_parent"
                        android:layout_height="42dp"
                        android:layout_below="@+id/account_line"
                        android:background="@color/aipay_white" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip"
                            android:gravity="center_vertical"
                            android:text="@string/sapi_verify"
                            android:textColor="@color/aipay_black"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/sapi_dynamic_login_et_smscode"
                            android:layout_width="0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:background="@null"
                            android:maxLength="8"
                            android:singleLine="true"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/get_vercode"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="15dp"
                            android:text="@string/aipay_get_sms_code"
                            android:textColor="@color/aipay_select_login" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pay_card_area"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp" >

                    <Button
                        android:id="@+id/phoneRegister"
                        android:layout_width="fill_parent"
                        android:layout_height="42dp"
                        android:background="@drawable/aipay_reg_selector"
                        android:text="@string/sapi_phone_re_fast"
                        android:textColor="@color/aipay_white"
                        android:textSize="15sp" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>